Resume in pdf form

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div style="width:100%;text-align:center;display:flex;">
 
-      <a href="./resume.html" style="flex:1;">
+      <a href="./resume.pdf" style="flex:1;">
       <div style="text-align:center;">
         <img style="width:50%;" src="./assets/icons/resume.svg">
         <h2>
