--- a/resumePrint.html
+++ b/resumePrint.html
@@ -43,7 +43,7 @@
      <div style="height:23vh;">
       <div style="border-bottom: 1px solid #444444;margin-top:-10px;">
        <h3 class="interestText" style="font-size:110%;display:inline-block;vertical-align:middle;margin-bottom:-15px;padding-bottom:0px;">Sara.ai</h3>
-       <p style="font-size:80%">AI that can parse a text using BNF and BERT and then answer questions about the text.</p>
+       <p style="font-size:80%">AI that can parse text using BNF and BERT and then answer questions about the text.</p>
       </div>
       <div style="border-bottom: 1px solid #444444;margin-top:-10px;">
        <h3 class="interestText" style="font-size:110%;display:inline-block;vertical-align:middle;margin-bottom:-15px;padding-bottom:0px;">Slug</h3>
@@ -77,8 +77,25 @@
     <div class="resumeBox">
      <h2>Work Experience</h2>
      <div>
+       <h2 style="font-size:140%;">Mr Owl</h2>
+       <p><b>Software Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2020-Current<br>Mr Owl Social Cloud Storage<br>Dr Owl Telemedicine Platform</p>
+       <!--
+       -->
+       <div style="width:100%;border-bottom: 1px solid #444444;">
+        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/node.svg">
+        <!--
+        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/html5.svg">
+        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/css3.svg">
+      -->
+        <img style="width:4vw;margin-right:10px;" src="./assets/icons/tech/js.svg">
+         <img style="width:4vw;margin-right:10px;" src="./assets/icons/tech/sql.svg">
+         <img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/java-alt-sq.svg'>
+       </div>
+
       <h2 style="font-size:140%;">E-Center</h2>
-      <p><b>Lead Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2019-Current<br>Sole Developer of E-Sports Statistics App<br> Image Recognition </p>
+      <p><b>Software Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2019-Current<br>API Development & Web Scraping<br>Integrated Video Analysis AI </p>
+      <!--
+      -->
       <div style="width:100%;border-bottom: 1px solid #444444;">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/node.svg">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/html5.svg">
@@ -86,16 +103,32 @@
        <img style="width:4vw;margin-right:10px;" src="./assets/icons/tech/js.svg">
         <img style="width:4vw;margin-right:10px;" src="./assets/icons/tech/sql.svg">
       </div>
+<!--
       <h2 style="font-size:140%;">Clarke Computing</h2>
-      <p><b>Freelance Web Developer</b><br>2016-Current<br>Developed variety of websites for many clients </p>
+      <p><b>Freelance Web Developer</b><br>2016-Current<br>Developed variety of websites & APIs<br>WordPress Themes and Plugins</p>
+
+      <ul>
+        <li>Custom Wordpress them development</li>
+        <li></li>
+      </ul>
+      <p>
+
+      </p>
+
       <div style="width:100%;border-bottom: 1px solid #444444;">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/html5.svg">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/css3.svg">
        <img style="width:4vw;margin-right:10px;" src="./assets/icons/tech/js.svg">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/wordpress.svg">
       </div>
+-->
       <h2 style="font-size:140%;">E-TransControl</h2>
-      <p><b>Software Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2016-2019<br>Web Development<br> Embedded Processor Development </p>
+      <p><b>Software Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2016-2019<br>Embedded C Processor Development<br>Web Development </p>
+      <!--
+      <p>
+        Designed and built integrated systems to control transmissions. Developed E-Commerce solution to assist in selling after-market auto parts.
+      </p>
+      -->
       <div style="width:100%;border-bottom: 1px solid #444444;">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/c.svg">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/html5.svg">
@@ -103,6 +136,7 @@
        <img style="width:4vw;margin-right:10px;" src="./assets/icons/tech/js.svg">
        <img style="width:4vw;border-radius:2vmin;margin-right:10px;" src="./assets/icons/tech/wordpress.svg">
       </div>
+
      </div>
     </div>
    </div>
@@ -113,7 +147,7 @@
     <h4 style="margin-top:10px;margin-bottom:0px;">Programming Languages</h4>
     <p style="margin-top:0px;font-size:85%;">JavaScript, NodeJS, HTML, CSS, Haskell, C, Java, SQL</p>
     <h4 style="margin-top:-10px;">Technologies</h4>
-    <p style="margin-top:-20px;font-size:85%">Git, Linux, Express, AWS, Databases, JSON</p>
+    <p style="margin-top:-20px;font-size:85%">Git, Linux, Express, AWS, Databases, JSON, OOP</p>
    </div>
   </div>
   <div id="links" class="resumeBox" style="margin-left:44.5vw;width:45%;margin-top:-50px;page-break-after:always;">
