--- a/resume.html
+++ b/resume.html
@@ -50,26 +50,10 @@
             </h5>
             <img src='./assets/icons/www.png' style="width:5%;display:inline-block;vertical-align:middle;margin-top:0;">
         </div>
-      </div></div></div>
-
-
-      <div style='width:40%;margin-right:10%;'>
-   <div class="resumeBox">
-      <h2>Work Experience</h2>
-      <div>
-        <h2>Mr Owl</h2>
-        <p><b>Software Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2020-Current<br>Worked on various projects related to the Mr Owl platform<br> Image Recognition </p>
-        <div style='width:100%;border-bottom: 1px solid #444444;'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/node.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/html5.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/css3.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/js.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/java-alt-sq.svg'></div>
-         <h2>E-Center</h2>
-         <p><b>Lead Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2019-Current<br>Sole Developer of E-Sports Statistics Web App<br> Image Recognition </p>
-         <div style='width:100%;border-bottom: 1px solid #444444;'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/node.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/html5.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/css3.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/js.svg'></div>
-         <h2>E-TransControl</h2>
-         <p><b>Software Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2016-2019<br>Web Development<br> Embedded Processor Development</p>
-         <div style='width:100%;border-bottom: 1px solid #444444;'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/c.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/html5.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/css3.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/js.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/wordpress.svg'></div>
-      </div>
-   </div>
-</div>
-
+      </div></div></div><div style='width:40%;margin-right:10%;'><div class="resumeBox"><h2>Work Experience</h2><div><h2>E-Center</h2><p><b>Lead Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2019-Current<br>Sole Developer of E-Sports Statistics Web App<br> Image Recognition 
+</p><div style='width:100%;border-bottom: 1px solid #444444;'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/node.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/html5.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/css3.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/js.svg'></div><h2>Clarke Computing</h2><p><b>Freelance Web Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2016-Current<br>Developed variety of websites for many clients
+</p><div style='width:100%;border-bottom: 1px solid #444444;'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/html5.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/css3.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/js.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/wordpress.svg'></div><h2>E-TransControl</h2><p><b>Software Developer</b>&nbsp;&nbsp;&nbsp;&nbsp;2016-2019<br>Web Development<br> Embedded Processor Development
+</p><div style='width:100%;border-bottom: 1px solid #444444;'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/c.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/html5.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/css3.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/js.svg'><img style='width:4vw;border-radius:2vmin;margin-right:10px;' src='./assets/icons/tech/wordpress.svg'></div></div></div></div>
 </div>
 </body>
 </html>
