--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   <div id="main">
     <div style="width:100%;text-align:center;margin-bottom:50px;">
       <h2 id="tagline">
-        Full Stack Web Developer • Bachelor's CS • Pursuing Master's of CS at UNM
+        Machine Learning Scientist • Master's CS • Focus on AI and ML
       </h2>
       <h2 id="taglineMobile">
-        Full Stack Web Developer<br>
-        Bachelor's CS</br>
-        Pursuing Master's of CS at UNM
+        Machine Learning Scientist<br>
+        Master's CS</br>
+        Focus on AI and ML
       </h2>
     </div>
 
