--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="main">
     <div style="width:100%;text-align:center;margin-bottom:50px;">
       <h2 id="tagline">
-        Machine Learning Scientist • Master's CS • Focus on AI and ML
+        Machine Learning Scientist • Master's CS • Specializes in NLP and Healthcare
       </h2>
       <h2 id="taglineMobile">
         Machine Learning Scientist<br>
