--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,17 @@
     document.getElementById("imgZoom").style.display="none";
   }
 </script>
+  <!-- Hotjar Tracking Code for Portfolio -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3334004,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 <div id="main" style="padding-top:50px;">
 
 
