--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   <div id="main">
     <div style="width:100%;text-align:center;margin-bottom:50px;">
       <h2 id="tagline">
-        Lead Machine Learning Scientist • Master's CS • Specializes in AI/LLM & Healthcare
+        Head of Data Science • Master's CS • Specializes in AI/LLM & Healthcare
       </h2>
       <h2 id="taglineMobile">
-        Machine Learning Scientist<br>
+        Head of Data Science<br>
         Master's CS</br>
-        Focus on AI and ML
+        Specializes in AI/LLM & Healthcare
       </h2>
     </div>
 
