--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <div id="main">
     <div style="width:100%;text-align:center;margin-bottom:50px;">
       <h2 id="tagline">
-        Head of Data Science • Master's CS • Specializes in AI/LLM & Healthcare
+        Head of Machine Learning • Master's CS • Specializes in AI/LLM & Healthcare
       </h2>
       <h2 id="taglineMobile">
-        Head of Data Science<br>
+        Head of Machine Learning<br>
         Master's CS</br>
         Specializes in AI/LLM & Healthcare
       </h2>
